tests/parse_print/autogen/768~1439583525_36/stderr.expected
Error:
    tests/parse_print/autogen/768~1439583525_36/spec.essence:8:41:
  |
8 |     [l_1 | l_1 : set (maxSize freq(mset(var1), var1) - (1 - 3) % 1 ** 3) of
  |                                         ^^^^
Cannot use variable of category : decision in the context of Domain
